height between words on mobile fix

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -257,12 +257,11 @@ a {
   position: relative;
   width: 100%;
   height: 120px;
+  padding-top: 20px;
   @include media-breakpoint-down(lg) {
     height: 100px;
   }
-  @include media-breakpoint-down(sm) {
-    height: 70px;
-  }
+
   &__inner {
     display: flex;
     align-items: center;
